--- a/ccs/protocol.tex
+++ b/ccs/protocol.tex
@@ -127,7 +127,8 @@ One option for deploying \system{} is to ensure there is some set $S$ of content
 system.  These publishers obfuscate their content, identifiers, and certificates, and most importantly, only have 
 obfuscated data stored on the CDNs cache nodes.  Recall that there are $n$ shared keys, resulting in $n$ replicas of the 
 content that {\it appear} to the CDN as different content (because each replica is encrypted with a different key).  This 
-allows the minimum set of publishers $S$ to be relatively small.  This partial deployment plan protects the set of content publishers $S$ and it 
+allows the minimum set of publishers $S$ to be relatively small; $S$ must be greater than one, otherwise the CDN can infer 
+that a client accessing this obfuscated content is actually accessing content that can be identified.  This partial deployment plan 
 partially protects the privacy of the clients accessing the content created by the set of publishers $S$.  It does not 
 protect the clients' privacy as completely as full participation of all publishers in \system{} because the CDN can 
 still view cross site browsing patterns among the publishers that are not participating. It is important to note though, that 
@@ -145,14 +146,20 @@ the CDN sees a significantly larger spike in accesses to certain content --- the
 spike on encrypted and plaintext content for the same publisher.  In order to prevent this deanonymization of the 
 content publisher, we can utilize multiple CDNs.  The publisher can spread replicas over different CDNs such that 
 the encrypted replicas are on one CDN and the plaintext replicas are on a different CDN.  In this case the publisher 
-is not susceptible to flashcrowds correlations and can still partially join the system.
+is not susceptible to flashcrowds correlations and can still join the system.
 
 \subsection{Optimizations}
 \label{sec:optimizations}
 While there are some optimizations that CDNs typically perform today that would not be possible with \system{}, the architecture 
-of \system{} allows for new optimizations that are not possible in existing CDNs.  Here we first outline some ways in which \system{} 
-can be optimized in terms of performance, and then we point out what performance enhancements CDNs would not be able to do with 
-\system{}.
+of \system{} allows for new optimizations that are not possible in existing CDNs.  Here we describe how \system{} limits 
+current traditional CDN's optimizations, and then we outline some ways in which \system{} 
+can be optimized in terms of performance.
+
+CDNs become slightly limited in terms of the possible performance optimizations when following \system{}'s design.  For example, 
+many CDNs perform HTTPS re-writes on content that they cache, but this can only be done if the CDN has access to the 
+decrypted content.  Similarly, the CDN needs the decrypted content to perform minimizations on HTML, CSS, and Javascript 
+files.  While this likely increases performance in traditional CDNs, it does not provide the greatest increase in performance; 
+content caching around the world is the greatest benefit to performance, which \system{} preserves.
 
 \paragraph{Pre-Fetch DNS Responses.} One way to increase the performance of \system{} is to pre-fetch DNS responses at 
 the proxies.  This would allow the proxy to serve each client request faster because it would not have to send 
@@ -167,9 +174,3 @@ proxies based on load; this can be implemented with a PAC file, which allows
 a client to access different proxies for different domains.  In addition to being a performance benefit, 
 this could also prevent a country from blocking the set of proxies that all of the country's citizens use; if 
 this occurs, then the citizens can be redirected to a different proxy.   
-
-On the other hand, CDNs become more limited in some of their actions when following \system{}'s design.  For example, 
-many CDNs perform HTTPS re-writes on content that they cache, but this can only be done if the CDN has access to the 
-decrypted content.  Similarly, the CDN needs the decrypted content to perform minimizations on HTML, CSS, and Javascript 
-files.  Any algorithms used internally to distribute content to certain caches based on what the content is can no longer 
-be used in \system{} because the CDN does not know what the content is. 
