--- a/ccs/performance.tex
+++ b/ccs/performance.tex
@@ -1,14 +1,22 @@
 \section{Performance Analysis}
 \label{sec:performance}
 
-We evaluate the performance impact of \system{} in comparison to a CDN that does not perform extra cryptographic operations by simulating both systems 
-using a series of Virtual Private Servers (VPSs).  The design of \system{} will likely affect the time that it takes a content publisher to publish her data as
+We evaluate the performance impact of \system{} in comparison to a CDN that does not perform extra cryptographic operations by simulating both systems.   
+We use a series of Virtual Private Servers (VPSs), where each VPS represents a stakeholder in \system{}; Figure \ref{fig:perf_setup} shows our 
+experimental setup.  The design of \system{} will likely affect the time that it takes a content publisher to publish her data as
 the data has to obfuscated.  Therefore, we measure the time it takes to obfuscate data.  Additionally, \system{} may affect the performance of web page retrieval; therefore, we measure the time to retrieve a objects of varying sizes.  Additionally, we simulate and analyze cache hit rates with varying numbers of 
 shared keys $k$, as a higher number of shared keys will result in a lower cache hit rate, and thus negatively affect performance. Analyzing the relationship between cache hit
 rates and the number of shared keys can help determine the optimal number of shared keys that should be used in \system{}.
 
 When implementing \system{}, we used SHA-256 for the HMAC implementation and AES-128 for symmetric key cryptographic operations.  We used the {\tt cryptography} library and implemented 
 all cryptographic operations in Python.  
+
+\begin{figure}[t]
+\centering
+\includegraphics[width=.5\textwidth]{perf_setup}
+\caption{Our experimental setup used to evaluate the performance overhead of \system{}.}
+\label{fig:perf_setup}
+\end{figure}
 
 \subsection{Obfuscation Overhead: Publishing}
 As content publishers must compute the HMAC$_k$(URL) and \{content\}$_k$, the act of publishing potentially 
