--- a/ccs/sigproc.bib
+++ b/ccs/sigproc.bib
@@ -9,12 +9,23 @@
   publisher={IEEE Press}
 }
 
+
+
 @article{xue2017cdns,
   title={{CDNs} Meet {CN}: An Empirical Study of {CDN} Deployments in China},
   author={Xue, Jingan and Choffnes, David and Wang, Jilong},
   journal={IEEE Access},
   year={2017},
   publisher={IEEE}
+}
+
+@inproceedings{andersen2005improving,
+  title={Improving web availability for clients with MONET},
+  author={Andersen, David G and Balakrishnan, Hari and Kaashoek, M Frans and Rao, Rohit N},
+  booktitle={Proceedings of the 2nd conference on Symposium on Networked Systems Design \& Implementation-Volume 2},
+  pages={115--128},
+  year={2005},
+  organization={USENIX Association}
 }
 
 @inproceedings{gilad2016cdn,
@@ -140,16 +151,44 @@
   howpublished = {\url{https://www.cedexis.com/}}
 }
 
+@inproceedings{panchenko2016website,
+  title={Website fingerprinting at internet scale},
+  author={Panchenko, Andriy and Lanze, Fabian and Zinnen, Andreas and Henze, Martin and Pennekamp, Jan and Wehrle, Klaus and Engel, Thomas},
+  booktitle={Network \& Distributed System Security Symposium (NDSS). IEEE Computer Society},
+  year={2016}
+}
+
+@inproceedings{cai2012touching,
+  title={Touching from a distance: Website fingerprinting attacks and defenses},
+  author={Cai, Xiang and Zhang, Xin Cheng and Joshi, Brijesh and Johnson, Rob},
+  booktitle={Proceedings of the 2012 ACM conference on Computer and communications security},
+  pages={605--616},
+  year={2012},
+  organization={ACM}
+}
+
 @misc{akamai_global_traffic,
   title = "{Akamai Empowers Operators to Deploy Their Own Content Distribution Network}",
   key = "Akamai",
   howpublished = {\url{https://www.akamai.com/us/en/resources/content-distribution-network.jsp}}
 }
 
+@article{arnbak2015loopholes,
+  title={Loopholes for circumventing the constitution: Unrestrained bulk surveillance on Americans by collecting network traffic abroad},
+  author={Arnbak, Axel and Goldberg, Sharon},
+  year={2015}
+}
+
 @misc{rfc2227,
   title = "{Simple Hit-Metering and Usage-Limiting for HTTP}",
   key = "Simple",
   howpublished = {\url{https://www.ietf.org/rfc/rfc2227.txt}}
+}
+
+@misc{microsoft_ireland,
+  title = "{2nd Circuit denies rehearing in Microsoft Ireland case by an evenly divided vote}",
+  key = "2nd", 
+  howpublished = {\url{https://www.washingtonpost.com/news/volokh-conspiracy/wp/2017/01/24/2nd-circuit-denies-rehearing-in-microsoft-ireland-case-by-an-evenly-divided-vote/?utm_term=.7007ac9e4dbc}}
 }
 
 @misc{microsoft_germany,
