--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -6,12 +6,12 @@ their citizens and foreigners, even when this data may be stored overseas.  For
 example, in a
 recent case, the United States government tried to compel Microsoft to
 surrender data about U.S. citizens, even when the data itself was stored
-abroad. Users may also face the converse problem, where access to their data
+abroad~\cite{microsoft_ireland}. Users may also face the converse problem, where access to their data
 may depend on the laws of the country where their data is stored. Recent work,
 for example, highlights the possibility that governments may move data across
-borders to facilitate surveillance.  
+borders to facilitate surveillance~\cite{arnbak2015loopholes}.  
 
-The rise of content distribution networks (CDNs) makes the threats to citizen
+The rise of content distribution networks (CDNs) makes the threat to citizens'
 privacy more widespread, because data may be replicated in geographically
 diverse regions, and users may not have purview over where their data is
 stored, or where their traffic goes.  One way to address this issue is to give
@@ -21,15 +21,15 @@ better help users control such routing of traffic. Yet, control over routing
 is only part of the story: if content is {\em hosted} in a particular country,
 then user traffic might traverse that country simply to retrieve the content.
 Thus, protecting user privacy requires protecting not only the routes that
-traffic traverses, but also both the contents and the access patterns of data
+traffic traverses, but also the contents and the access patterns of data
 stored on CDN cache nodes.
 
 In this paper, we design and implement a content distribution network that
 allows clients to retrieve web objects, while preventing the CDN cache nodes
 from learning either the content that is stored on the cache nodes or the
 content that clients are requesting. We call this system an {\em oblivious
-CDN}~(OCDN), because the CDN itself is oblivious to both the content it is
-storing and the content that clients are requesting. OCDN allows clients to
+CDN}~(\system{}), because the CDN itself is oblivious to both the content it is
+storing and the content that clients are requesting. \system{} allows clients to
 request individual objects with identifiers that are encrypted with a key that
 is shared by a client proxy and the origin server that is pushing content to
 cache nodes, but is not known to any of the CDN cache nodes.  To do so, the
@@ -41,8 +41,8 @@ server. The CDN cache node then returns the object corresponding to the object
 identifier; that object is also encrypted with a key that is shared between
 the origin and the proxy. This approach allows a user to retrieve content from
 a CDN without the cache node ever seeing the URL or the corresponding content.
-Users can use OCDN with minimal modification to their existing configuration:
-merely directing a web browser to an OCDN proxy allows a client to use the
+Users can use \system{} with minimal modification to their existing configuration:
+merely directing a web browser to an \system{} proxy allows a client to use the
 system.
 
 Although the basic mechanisms for obfuscating the URL and the corresponding
@@ -52,34 +52,35 @@ nodes or (2)~which objects individual clients are requesting is more
 challenging, due to the many possible inference attacks that a CDN might be
 able to run. For example, previous work has shown that even when web content
 is encrypted, the retrieval of a collection of objects of various sizes can
-yield information about the web page that was being fetched. Similarly, URLs
+yield information about the web page that was being fetched~\cite{panchenko2016website,
+cai2012touching}. Similarly, URLs
 can often be inferred from relative popularity in a distribution of web
-requests, even when the requests themselves are encrypted. OCDN addresses
+requests, even when the requests themselves are encrypted. \system{} addresses
 these challenges by creating copies of the same object that are encrypted
 under different keys, and deploying multiple versions of the same object to
 the same CDN cache node, with each copy being encrypted with a different key.
 While this approach reduces the threat of various types of inference and also
-limits the number of OCDN proxies that share a key, each CDN cache node must
+limits the number of \system{} proxies that share a key, each CDN cache node must
 store multiple copies of the same object, reducing both storage efficiency and
 cache hit rates. Our evaluation explores the implications of this tradeoff, as
-well as how OCDN performs relative to a conventional CDN.
+well as how \system{} performs relative to a conventional CDN.
 
 We make the following contributions. First, we explore the problems that
 arise when data is stored across jurisdictional boundaries and highlight the
 need for a CDN that is oblivious to the content it is hosting and serving.
-Second, we design and implement OCDN, a CDN that can be oblivious to the
+Second, we design and implement \system{}, a CDN that can be oblivious to the
 content that it is hosting, as well as the content that clients are
-retrieving. Finally, we evaluate the performance of OCDN for both individual
-object retrieval and complete web page loads and show that OCDN incurs a performance
-overhead of only XX\% relative to conventional CDNs.
+retrieving. Finally, we evaluate the performance of OCDN for individual
+object retrieval and cache hit rates, showing that \system{} incurs a negligible performance
+overhead relative to conventional CDNs.
 
 The rest of the paper is organized as follows. Section~\ref{sec:background} describes
 the typical operation of a CDN, the types of information that CDN operators
 typically know today, and the types of information we aim to obfuscate.  Section~
-\ref{sec:threat} describes the threat model and security objectives for OCDN; based
+\ref{sec:threat} describes the threat model and security objectives for \system{}; based
 on these threats, Section~\ref{sec:design} outlines various design decisions. Section~
 \ref{sec:protocol} describes the protocol for both publishing and retrieving content,
-and Section~\ref{sec:performance} evaluates the performance overhead of OCDN. Section~
+and Section~\ref{sec:performance} evaluates the performance overhead of \system{}. Section~
 \ref{sec:discussion} describes various limitations and possible avenues for future
 work, Section~\ref{sec:related} discusses related work, and Section~\ref{sec:conclusion}
 concludes.
