added cache hit rate results

--- a/ccs/intro.tex
+++ b/ccs/intro.tex
@@ -70,7 +70,7 @@ arise when data is stored across jurisdictional boundaries and highlight the
 need for a CDN that is oblivious to the content it is hosting and serving.
 Second, we design and implement \system{}, a CDN that can be oblivious to the
 content that it is hosting, as well as the content that clients are
-retrieving. Finally, we evaluate the performance of OCDN for individual
+retrieving. Finally, we evaluate the performance of \system{} for individual
 object retrieval and cache hit rates, showing that \system{} incurs a negligible performance
 overhead relative to conventional CDNs.
 
